# map-app-base

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rustfmt.toml
http/: drivers.http  hello.http  places.http  routes.http  users.http
migrations/: 0001_create_users_drivers_table.down.sql  0001_create_users_drivers_table.up.sql  20240724232905_create_items_table.up.sql
src/: auth.rs  config.rs  db.rs  item.rs  main.rs
src/adapter/: mod.rs
src/adapter/controller/: app_error.rs  mod.rs
src/adapter/controller/v1/: destinations_router.rs  drivers_router.rs  handle_error.rs  mod.rs  (+3 more)
src/adapter/gateways/: db_connection.rs  driver_repository.rs  mod.rs  place_repository.rs  route_repository.rs  user_repository.rs
src/application/repository/: driver_repository.rs  mod.rs  place_repository.rs  route_repository.rs  user_repository.rs
src/application/usecase/: mod.rs
src/domain/: address.rs  domain_error.rs  driver.rs  email.rs  mod.rs  password.rs  route.rs  user.rs  user_id.rs
src/domain/driver/: driver.rs  driver_id.rs  mod.rs
src/domain/place/: mod.rs  place.rs  place_id.rs  place_search_condition.rs
src/domain/route/: leg.rs  mod.rs  route.rs  route_id.rs  route_search_condition.rs  step.rs
src/domain/user/: user.rs  user_id.rs
src/domain/value_object/: distance.rs  duration.rs  email.rs  mod.rs  password.rs  point.rs
src/usecase/repository/: mod.rs  repositoroy_error.rs  user_repository.rs
src/usecase/users/: create_user_usecase.rs  delete_user_usecase.rs  get_user_list_usecase.rs  get_user_usecase.rs  mod.rs
(+25 files in other folders)
