[package]
name = "map-app-base"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
axum = { version = "0.7.5", features = ["json", "query"] }
dotenv = "0.15"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
http = "1.1.0"

sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

jsonwebtoken = "9.3.0"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.22"

thiserror = "1.0.63"
